<resources>
    <string name="app_name">表情图库</string>
    <string name="emotion">表情包</string>
    <string name="previewImg">预览图片</string>
    <string name="quantity">数量</string>
    <string name="manage">管理</string>
    <string name="delete">删除</string>
    <string name="export">导出</string>
    <string name="shareToQQ">分享到QQ</string>
    <string name="sort_input_hint">请输入新类名</string>
    <string name="sort_delete_hint">是否删除该分类</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="default_text">默认</string>
    <string name="name_width">这是分类名的最大宽度</string>
</resources>