<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.GalleryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gallery_bar_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="15sp"
            android:textColor="@color/grey_text"
            app:layout_constraintBottom_toTopOf="@id/gallery_bar_quantity_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gallery_bar_quantity_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/quantity"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/gallery_bar_quantity_text"
            app:layout_constraintStart_toStartOf="@id/gallery_bar_quantity_text"
            app:layout_constraintTop_toBottomOf="@id/gallery_bar_quantity_text" />

        <TextView
            android:id="@+id/gallery_bar_manage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/manage"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gallery_bar_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/delete"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gallery_bar_export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/export"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gallery_bar_delete_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/gallery_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/gallery_bar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_emotion_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_background"
        app:layout_constraintBottom_toTopOf="@id/gallery_line_2"
        app:layout_constraintTop_toBottomOf="@id/gallery_line_1" />

    <View
        android:id="@+id/gallery_line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_alpha_20"
        android:visibility="invisible">

        <View
            android:id="@+id/gallery_preview_blank_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gallery_preview_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <ImageView
            android:id="@+id/gallery_preview_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/previewImg"
            app:layout_constraintBottom_toTopOf="@id/gallery_preview_blank_2"
            app:layout_constraintTop_toBottomOf="@id/gallery_preview_blank_1"
            app:layout_constraintVertical_weight="2" />

        <View
            android:id="@+id/gallery_preview_blank_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gallery_preview_image"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/gallery_preview_export_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/square_all"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/export"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/gallery_preview_share_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gallery_preview_blank_2" />

        <TextView
            android:id="@+id/gallery_preview_share_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/square_all"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/shareToQQ"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gallery_preview_export_button"
            app:layout_constraintTop_toTopOf="@id/gallery_preview_blank_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>